feat: update pr action

--- a/.github/workflows/prAction.yml
+++ b/.github/workflows/prAction.yml
@@ -5,6 +5,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [10.x]
+
     defaults:
       run:
         working-directory: ./packages/swift-ui
