--- a/.github/workflows/prAction.yml
+++ b/.github/workflows/prAction.yml
@@ -21,9 +21,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       - run: npm run test
-      - name: Comment Test Coverage
-        uses: AthleticNet/comment-test-coverage@1.1
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          path: /packages/swift-ui/tests/coverage/coverage-summary.json
-          title: Test Coverage
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path: /packages/swift-ui/tests/coverage/coverage-final.json
