--- a/.github/workflows/prAction.yml
+++ b/.github/workflows/prAction.yml
@@ -26,4 +26,4 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: /packages/swift-ui/tests/coverage/lcov.info
+          path-to-lcov: ./packages/swift-ui/tests/coverage/lcov.info
